apps/my-app/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-NodePort
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
